--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="오피박사 - 최고로 신뢰할 수 있는 오피 정보 제공 사이트, 오피 사이트 찾기, 오피업소, 마사지, 스웨디시 정보">
+    <meta name="description" content="오피박사 - 최고의 오피 정보 제공, 출장마사지, 스웨디시, 오피업소, 휴게텔, 안마 정보 제공 사이트">
+    <meta name="google-site-verification" content="HxtlBHbzNxF3EyZOjA-QYTWF3PEl2VltmIsJ8QQzBu4" />
+    <meta name="naver-site-verification" content="70cd1247b3e867d699043be29a41fe53121a97c2" />
     <meta name="robots" content="index, follow">
+    <meta property="og:title" content="오피박사 | 최고의 오피 정보 제공 사이트">
+    <meta property="og:description" content="오피박사는 오피사이트, 출장마사지, 스웨디시, 안마, 휴게텔 등 유흥 정보를 제공합니다. 신뢰할 수 있는 오피 정보와 업소 리뷰를 제공하며, 최신 정보를 실시간으로 업데이트합니다.">
+    <meta property="og:image" content="https://static.wixstatic.com/media/fefa38_a2178ded005c4f53b0d75336fdad1a68~mv2.jpg">
+    <meta property="og:url" content="https://opbss.com">
+    <meta property="og:locale" content="ko_KR">
     <title>오피박사 | 최고의 오피 정보</title>
     <style>
         :root {
@@ -141,13 +148,13 @@
 
     <nav class="topnav">
         <a href="/" class="active">홈</a>
-        <a href="/services">서비스소개</a>
-        <a href="/contact">제휴문의</a>
+        <a href="/services.html">서비스소개</a>
+        <a href="/contact.html">제휴문의</a>
     </nav>
 
     <div class="hero">
         <a href="https://opbaksa.com">
-            <img class="hero-img" src="https://static.wixstatic.com/media/fefa38_a2178ded005c4f53b0d75336fdad1a68~mv2.jpg" alt="오피박사 메인 이미지">
+            <img class="hero-img" src="https://static.wixstatic.com/media/fefa38_e4c2b304b2fd453484278f88d844a763~mv2.jpg" alt="오피박사 메인 이미지">
         </a>
         <a href="https://opbaksa.com" class="cta-button">오피박사 바로가기</a>
     </div>
