Update navigation links to remove file extensions

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
 
     <nav class="topnav">
         <a href="/" class="active">홈</a>
-        <a href="/services.html">서비스소개</a>
-        <a href="/contact.html">제휴문의</a>
+        <a href="/services">서비스소개</a>
+        <a href="/contact">제휴문의</a>
     </nav>
 
     <div class="hero">
