--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
     <nav class="topnav">
         <a href="/" class="active">홈</a>
-        <a href="/services">서비스소개</a>
+        <a href="/service">서비스소개</a>
         <a href="/contact">제휴문의</a>
     </nav>
 
