--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -10,10 +9,31 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="오피박사 | 최고의 오피 정보 제공 사이트">
     <meta property="og:description" content="오피박사는 오피사이트, 출장마사지, 스웨디시, 안마, 휴게텔 등 유흥 정보를 제공합니다. 신뢰할 수 있는 오피 정보와 업소 리뷰를 제공하며, 최신 정보를 실시간으로 업데이트합니다.">
-    <meta property="og:image" content="https://static.wixstatic.com/media/fefa38_a2178ded005c4f53b0d75336fdad1a68~mv2.jpg">
-    <meta property="og:url" content="https://opbss.com">
+    <meta property="og:image" content="https://static.wixstatic.com/media/fefa38_0f8e3ad3aa774c8494de3ec94e43ebcf~mv2.jpg">
+    <meta property="og:url" content="https://www.opbss.com">
     <meta property="og:locale" content="ko_KR">
+
+    <!-- Canonical URL for SEO optimization -->
+    <link rel="canonical" href="https://www.opbss.com">
+
     <title>오피박사 | 최고의 오피 정보</title>
+
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Service",
+        "serviceType": "오피 정보 제공",
+        "provider": {
+            "@type": "Organization",
+            "name": "오피박사",
+            "url": "https://www.opbss.com",
+            "logo": "https://static.wixstatic.com/media/fefa38_50b01e3e0d4a4365b7efee82dbbdb1ed~mv2.png"
+        },
+        "description": "오피박사는 출장마사지, 스웨디시, 오피업소, 휴게텔, 안마 등 다양한 유흥 정보를 제공하는 신뢰할 수 있는 서비스입니다.",
+        "mainEntityOfPage": "https://www.opbss.com/service.html"
+    }
+    </script>
+
     <style>
         :root {
             --primary: #ff4d4d;
@@ -148,8 +168,8 @@
 
     <nav class="topnav">
         <a href="/" class="active">홈</a>
-        <a href="/service">서비스소개</a>
-        <a href="/contact">제휴문의</a>
+        <a href="/services.html">서비스소개</a>
+        <a href="/contact.html">제휴문의</a>
     </nav>
 
     <div class="hero">
@@ -186,3 +206,11 @@
     </footer>
 </body>
 </html>
+"""
+
+# Save the updated service.html content
+updated_service_html_path = '/mnt/data/updated_service_with_seo_and_keywords_final.html'
+with open(updated_service_html_path, 'w', encoding='utf-8') as file:
+    file.write(service_page_updated_with_seo_and_keywords)
+
+updated_service_html_path  # Provide the path for download
