--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             "logo": "https://static.wixstatic.com/media/fefa38_50b01e3e0d4a4365b7efee82dbbdb1ed~mv2.png"
         },
         "description": "오피박사는 출장마사지, 스웨디시, 오피업소, 휴게텔, 안마 등 다양한 유흥 정보를 제공하는 신뢰할 수 있는 서비스입니다.",
-        "mainEntityOfPage": "https://www.opbss.com/service.html"
+        "mainEntityOfPage": "https://www.opbss.com/service"
     }
     </script>
 
