--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="오피박사 - 최고의 오피 정보 제공, 출장마사지, 스웨디시, 오피업소, 휴게텔, 안마 정보 제공 사이트">
     <meta name="google-site-verification" content="HxtlBHbzNxF3EyZOjA-QYTWF3PEl2VltmIsJ8QQzBu4" />
     <meta name="naver-site-verification" content="70cd1247b3e867d699043be29a41fe53121a97c2" />
+    <meta name="naver-site-verification" content="58bba86eb1ccfa5319d8f66089161d733d002a7c" />
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="오피박사 | 최고의 오피 정보 제공 사이트">
     <meta property="og:description" content="오피박사는 오피사이트, 출장마사지, 스웨디시, 안마, 휴게텔 등 유흥 정보를 제공합니다. 신뢰할 수 있는 오피 정보와 업소 리뷰를 제공하며, 최신 정보를 실시간으로 업데이트합니다.">
