--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="오피박사 - 최고의 오피 정보 제공, 출장마사지, 스웨디시, 오피업소, 휴게텔, 안마 정보 제공 사이트">
+    <meta name="description" content="오피박사 - 최고의 오피 정보사이트 출장마사지, 스웨디시, 오피, 휴게텔, 안마, 유흥 전국 정보 제공 사이트">
     <meta name="google-site-verification" content="HxtlBHbzNxF3EyZOjA-QYTWF3PEl2VltmIsJ8QQzBu4" />
     <meta name="naver-site-verification" content="70cd1247b3e867d699043be29a41fe53121a97c2" />
     <meta name="naver-site-verification" content="58bba86eb1ccfa5319d8f66089161d733d002a7c" />
     <meta name="robots" content="index, follow">
-    <meta property="og:title" content="오피박사 | 최고의 오피 정보 제공 사이트">
+    <meta property="og:title" content="오피박사 | 전국 오피 정보 최신 사이트">
     <meta property="og:description" content="오피박사는 오피사이트, 출장마사지, 스웨디시, 안마, 휴게텔 등 유흥 정보를 제공합니다. 신뢰할 수 있는 오피 정보와 업소 리뷰를 제공하며, 최신 정보를 실시간으로 업데이트합니다.">
     <meta property="og:image" content="https://static.wixstatic.com/media/fefa38_0f8e3ad3aa774c8494de3ec94e43ebcf~mv2.jpg">
     <meta property="og:url" content="https://www.opbss.com">
@@ -17,7 +17,7 @@
     <!-- Canonical URL for SEO optimization -->
     <link rel="canonical" href="https://www.opbss.com">
 
-    <title>오피박사 | 최고의 오피 정보</title>
+    <title>오피박사 | 전국 실시간 오피 사이트</title>
 
     <script type="application/ld+json">
     {
