--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
 <!-- Navigation -->
 <nav class="topnav">
     <a href="/">홈</a>
-    <a href="/services.html">서비스소개</a>
+    <a href="/service.html">서비스소개</a>
     <a href="/contact.html" class="active">제휴문의</a>
 </nav>
 
