--- a/contact.html
+++ b/contact.html
@@ -1,178 +1,66 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="오피박사 제휴문의 페이지 - 제휴 및 비즈니스 문의를 통해 오피박사와 함께 성장해 나가세요.">
-    <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-    <meta property="og:title" content="오피박사 제휴문의">
-    <meta property="og:description" content="오피박사 제휴문의 페이지. 제휴 관련 문의는 텔레그램을 통해 간편하게 할 수 있습니다.">
-    <meta property="og:image" content="https://static.wixstatic.com/media/fefa38_50b01e3e0d4a4365b7efee82dbbdb1ed~mv2.png">
-    <meta property="og:url" content="https://opbaksa.com/contact.html">
-    <meta property="og:locale" content="ko_KR">
-    <title>오피박사 제휴문의</title>
-    <style>
-        :root {
-            --primary: #ff4d4d;
-            --accent: #ffd54a;
-            --text: #eaeaea;
-            --bg: #0b0b0b;
-            --card: #121212;
-            --border: #1f1f1f;
-            --radius: 14px;
-            --imgw: 400px;
-        }
-        * { box-sizing: border-box; }
-        html, body {
-            margin: 0;
-            padding: 0;
-            background: var(--bg);
-            color: var(--text);
-            font-family: -apple-system, BlinkMacSystemFont, 'Noto Sans KR', Segoe UI, Roboto, Arial, sans-serif;
-            overflow-x: hidden;
-        }
-        a {
-            color: var(--primary);
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        .container {
-            width: 100%;
-            max-width: 1100px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-        .brandbar {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 12px;
-            padding: 12px 16px;
-            border-bottom: 1px solid var(--border);
-            background: #0b0b0b;
-        }
-        .brand-logo {
-            height: 50px;
-            width: auto;
-            display: block;
-        }
-        .topnav {
-            display: flex;
-            gap: 12px;
-            padding: 10px 20px;
-            border-bottom: 1px solid var(--border);
-            background: #0b0b0b;
-            justify-content: center;
-        }
-        .topnav a {
-            padding: 8px 12px;
-            border-radius: 10px;
-            border: 1px solid transparent;
-            color: #e4e4e4;
-        }
-        .topnav a.active, .topnav a:hover {
-            border-color: var(--border);
-            background: #111;
-        }
-        .hero {
-            border-bottom: 1px solid var(--border);
-            padding: 10px 0 12px;
-            text-align: center;
-        }
-        .hero-img {
-            display: block;
-            width: var(--imgw);
-            height: auto;
-            margin: 0 auto;
-            cursor: pointer;
-        }
-        h1 {
-            font-size: clamp(30px, 4vw, 50px);
-            margin: 16px 0 6px;
-            letter-spacing: -.02em;
-            text-align: center;
-        }
-        h2 {
-            font-size: clamp(22px, 3.2vw, 32px);
-            margin: 28px 0 12px;
-            text-align: center;
-        }
-        .muted {
-            color: var(--muted);
-        }
-        .cta-button {
-            display: inline-block;
-            background-color: var(--primary);
-            color: #fff;
-            padding: 14px 28px;
-            border-radius: 6px;
-            text-align: center;
-            text-decoration: none;
-            box-shadow: 0 0 10px rgba(255, 0, 140, 0.4);
-            margin: 30px 0;
-            font-size: 18px;
-            transition: background 0.3s ease, transform 0.2s ease;
-        }
-        .cta-button:hover {
-            background-color: var(--accent);
-            transform: scale(1.1);
-        }
-        footer {
-            padding: 20px 0;
-            text-align: center;
-            background: #111;
-            color: var(--text);
-        }
-        .content {
-            padding: 20px;
-        }
-        .content p {
-            line-height: 1.6;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>제휴문의 | 오피박사</title>
+
+<meta name="description" content="오피박사 제휴 문의 안내 페이지입니다. 텔레그램을 통해 간편하게 문의하실 수 있습니다.">
+<meta name="robots" content="index, follow">
+<link rel="canonical" href="https://www.opbss.com/contact.html">
+
+<style>
+body{margin:0;background:#000;color:#eaeaea;font-family:-apple-system,BlinkMacSystemFont,'Noto Sans KR',sans-serif}
+a{text-decoration:none;color:inherit}
+.header{border-bottom:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.6)}
+.nav{max-width:1100px;margin:0 auto;padding:16px 20px;display:flex;justify-content:space-between;align-items:center}
+.logo{font-size:22px;font-weight:700;color:#ffd54a}
+.menu{display:flex;gap:18px}
+.menu a{color:#ddd;padding:8px 14px;border-radius:10px}
+.menu a:hover{background:#111}
+.container{max-width:1100px;margin:0 auto;padding:60px 20px;text-align:center}
+h1{font-size:40px;margin-bottom:16px}
+p{color:#ccc;font-size:18px;line-height:1.7}
+.cta{display:inline-block;margin-top:40px;padding:18px 40px;background:linear-gradient(135deg,#ff4d4d,#ff2f6d);border-radius:14px;font-size:20px;font-weight:600;box-shadow:0 18px 40px rgba(255,77,77,.4)}
+.cta:hover{transform:translateY(-2px)}
+footer{text-align:center;padding:30px 20px;background:#080808;color:#777;font-size:14px}
+</style>
 </head>
+
 <body>
 
-<!-- Header -->
-<div class="brandbar">
-    <a href="/" aria-label="Home">
-        <img src="https://static.wixstatic.com/media/fefa38_50b01e3e0d4a4365b7efee82dbbdb1ed~mv2.png" alt="오피박사 로고" class="brand-logo" width="242" height="36"/>
-    </a>
+<header class="header">
+  <nav class="nav">
+    <div class="logo">오피박사</div>
+    <div class="menu">
+      <a href="/">홈</a>
+      <a href="/service.html">서비스소개</a>
+      <a href="/contact.html">제휴문의</a>
+    </div>
+  </nav>
+</header>
+
+<div class="container">
+<h1>제휴문의</h1>
+<p>
+오피박사는 제휴 요청을 무분별하게 받지 않습니다.  
+운영 방향과 맞는 경우에 한해  
+간단한 소통을 통해 협업 여부를 검토합니다.
+</p>
+<p>
+아래 텔레그램을 통해 편하게 문의해주세요.
+</p>
+
+<a class="cta" href="https://t.me/opbaksa" target="_blank">
+텔레그램 제휴문의 바로가기
+</a>
 </div>
 
-<!-- Navigation -->
-<nav class="topnav">
-    <a href="/">홈</a>
-    <a href="/service.html">서비스소개</a>
-    <a href="/contact.html" class="active">제휴문의</a>
-</nav>
-
-<!-- Main Content -->
-<main class="container">
-    <h1>오피박사 제휴문의</h1>
-    <p class="muted">오피박사와 제휴를 원하시는 분들은 아래의 링크를 통해 간편하게 제휴 관련 문의를 해주세요.</p>
-
-    <section>
-        <h2>제휴문의</h2>
-        <p>오피박사는 오피 업소 정보 제공 및 다양한 관련 서비스를 제공하는 플랫폼입니다. 제휴를 통해 함께 성장할 파트너를 찾고 있습니다.</p>
-        <p>제휴 및 기타 문의 사항은 텔레그램을 통해 간편하게 연락하실 수 있습니다. 아래의 링크를 클릭하시면 제휴 관련 내용을 바로 확인하고 연락하실 수 있습니다.</p>
-        <a href="https://t.me/opbaksa" class="cta-button">제휴문의</a>
-    </section>
-
-    <!-- Hero Image -->
-    <div class="hero">
-        <img src="https://static.wixstatic.com/media/fefa38_e4c2b304b2fd453484278f88d844a763~mv2.jpg" alt="오피박사 제휴 이미지" class="hero-img">
-    </div>
-
-</main>
-
-<!-- Footer -->
 <footer>
-    <p>&copy; 2025 오피박사. All Rights Reserved.</p>
+© 2025 오피박사. All Rights Reserved.
 </footer>
 
 </body>
 </html>
+
