--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>오피박사 | 오피 정보 안내 플랫폼</title>
+<title>오피박사 | 오피 사이트 정보 안내</title>
 
-<meta name="description" content="오피박사는 오피 정보를 중심으로 다양한 유흥 사이트 정보를 안내하는 정보 제공 플랫폼입니다. 지역별 오피 정보와 서비스 형태를 차분하고 신뢰감 있게 정리합니다.">
+<meta name="description" content="오피사이트 오피박사는 전국 오피 정보를 중심으로 다양한 유흥 사이트 정보를 안내하는 정보 제공 플랫폼입니다. 지역별 오피 정보와 서비스 형태를 차분하고 신뢰감 있게 정리합니다.">
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://www.opbss.com">
 
-<meta property="og:title" content="오피박사 | 오피 정보 안내 플랫폼">
+<meta property="og:title" content="오피사이트 | 오피박사 정보 안내 플랫폼">
 <meta property="og:description" content="오피 정보를 중심으로 한 신뢰 가능한 정보 안내 플랫폼">
 <meta property="og:image" content="https://static.wixstatic.com/media/fefa38_0f8e3ad3aa774c8494de3ec94e43ebcf~mv2.jpg">
 <meta property="og:url" content="https://www.opbss.com">
@@ -213,7 +213,7 @@ footer{
 
   <!-- CTA -->
   <div class="cta-wrap">
-    <a href="https://opbaksa.com" target="_blank" class="cta-btn">
+    <a href="https://opbs1.com" target="_blank" class="cta-btn">
       오피박사 바로가기
     </a>
   </div>
