Update title and description in contact.html

--- a/contact.html
+++ b/contact.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>제휴문의 | 오피박사</title>
+<title>오피사이트 제휴문의</title>
 
-<meta name="description" content="오피박사 제휴 문의 안내 페이지입니다. 텔레그램을 통해 간편하게 문의하실 수 있습니다.">
+<meta name="description" content="오피사이트 제휴 문의 안내 페이지입니다. 간편하게 문의하실 수 있습니다.">
 <meta name="robots" content="index, follow">
 <link rel="canonical" href="https://www.opbss.com/contact.html">
 
@@ -52,8 +52,8 @@ footer{text-align:center;padding:30px 20px;background:#080808;color:#777;font-si
 아래 텔레그램을 통해 편하게 문의해주세요.
 </p>
 
-<a class="cta" href="https://t.me/opbaksa" target="_blank">
-텔레그램 제휴문의 바로가기
+<a class="cta" href="https://opbs1.com" target="_blank">
+제휴문의 바로가기
 </a>
 </div>
 
